nearest/tests/compile-fail/derive_enum_explicit_discriminant.rs
//! An enum with explicit discriminants must not compile.

use nearest::Flat;

#[derive(Flat)]
#[repr(u8)]
enum Bad {
  A = 5,
  B = 10,
}

fn main() {}
